--- a/index.html
+++ b/index.html
@@ -1,150 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="desription"
-      content="Omnifood is an AI-powered food 
+    <meta name="desription" content="Omnifood is an AI-powered food 
     scbscription that will make yu eat headlthy 
     again, 365 days per year.It's tailored to 
-    your personal tastes and nutritional needs."
-    />
+    your personal tastes and nutritional needs." />
     <link rel="icon" href="./img/favicon.png" />
     <link rel="apple-toch-icon" href="./img/apple-touch-icon.png" />
     <link rel="manifest.webmanifest" href="manifest.webmanifest" />
     <link rel="stylesheet" href="./css/general.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/qeuires.css" />
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
-    <script
-      defer
-      src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
-    ></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script defer src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
     <script defer src="./js/script.js"></script>
     <title>Omnifood &mdash; Never cook again!</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <header class="header">
-      <a href="#">
-        <img src="./img/omnifood-logo.png" class="logo" alt="omnifood-logo" />
-      </a>
-      <nav class="main-nav">
-        <ul class="main-nav-list">
-          <li><a class="main-nav-list" href="#how">How it works</a></li>
-          <li><a class="main-nav-list" href="#meals">Meals</a></li>
-          <li><a class="main-nav-list" href="#testimonals">Testimonals</a></li>
-          <li><a class="main-nav-list" href="#pricing">Pricing</a></li>
-          <li><a class="main-nav-list nav-cta" href="#cta">Try for free</a></li>
-        </ul>
-      </nav>
+        <a href="#">
+            <img src="./img/omnifood-logo.png" class="logo" alt="omnifood-logo" />
+        </a>
+        <nav class="main-nav">
+            <ul class="main-nav-list">
+                <li><a class="main-nav-list" href="#how">How it works</a></li>
+                <li><a class="main-nav-list" href="#meals">Meals</a></li>
+                <li><a class="main-nav-list" href="#testimonals">Testimonals</a></li>
+                <li><a class="main-nav-list" href="#pricing">Pricing</a></li>
+                <li><a class="main-nav-list nav-cta" href="#cta">Try for free</a></li>
+            </ul>
+        </nav>
 
-      <button class="btn-mobile-nav">
-        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
-        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
-      </button>
+        <button class="btn-mobile-nav">
+            <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+            <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+        </button>
     </header>
 
     <main>
-      <section class="section-hero">
-        <div class="hero">
-          <div class="hero-text-box">
-            <h1 class="heading-primary">
-              A healthy meal delivered to your door, every single day
-            </h1>
-            <p class="hero-description">
-              The smart 365-days-per-year food subscription that will make you
-              eat healthy again. Tailored to your personal tastes and
-              nutritional needs.
-            </p>
-            <a href="#cta" class="btn btn--full margin-right-sm"
-              >Start eating well</a
-            >
-            <a href="#how" class="btn btn--outline">Learn more &darr;</a>
-            <div class="delivered-meals">
-              <div class="delivered-imgs">
-                <img src="Img/customer/customer-1.jpg" alt="customer photo" />
-                <img src="Img/customer/customer-2.jpg" alt="customer photo" />
-                <img src="Img/customer/customer-3.jpg" alt="customer photo" />
-                <img src="Img/customer/customer-4.jpg" alt="customer photo" />
-                <img src="Img/customer/customer-5.jpg" alt="customer photo" />
-                <img src="Img/customer/customer-6.jpg" alt="customer photo" />
-              </div>
-              <p class="delivered-text">
-                <span>250,000+</span>meals delivered last year!
-              </p>
+        <section class="section-hero">
+            <div class="hero">
+                <div class="hero-text-box">
+                    <h1 class="heading-primary">
+                        A healthy meal delivered to your door, every single day
+                    </h1>
+                    <p class="hero-description">
+                        The smart 365-days-per-year food subscription that will make you
+                        eat healthy again. Tailored to your personal tastes and
+                        nutritional needs.
+                    </p>
+                    <a href="#cta" class="btn btn--full margin-right-sm">Start eating well</a>
+                    <a href="#how" class="btn btn--outline">Learn more &darr;</a>
+                    <div class="delivered-meals">
+                        <div class="delivered-imgs">
+                            <img src="Img/customer/customer-1.jpg" alt="customer photo" />
+                            <img src="Img/customer/customer-2.jpg" alt="customer photo" />
+                            <img src="Img/customer/customer-3.jpg" alt="customer photo" />
+                            <img src="Img/customer/customer-4.jpg" alt="customer photo" />
+                            <img src="Img/customer/customer-5.jpg" alt="customer photo" />
+                            <img src="Img/customer/customer-6.jpg" alt="customer photo" />
+                        </div>
+                        <p class="delivered-text">
+                            <span>250,000+</span>meals delivered last year!
+                        </p>
+                    </div>
+                </div>
+                <div class="hero-img-box">
+                    <img src="./Img/hero.jpg" class="hero-img"
+                        alt="women enjoying a food, meals in storage container, and food bowls on a table" />
+                </div>
             </div>
-          </div>
-          <div class="hero-img-box">
-            <img
-              src="./Img/hero.jpg"
-              class="hero-img"
-              alt="women enjoying a food, meals in storage container, and food bowls on a table"
-            />
-          </div>
-        </div>
-      </section>
+        </section>
 
-      <section class="section-featured">
-        <div class="conatiner">
-          <h2 class="heading-featured-in">As featured in</h2>
-          <div class="logos">
-            <img src="./img/logos/techcrunch.jpg" alt="BBC logo" />
-            <img
-              src="./img/logos/business-insider.jpg"
-              alt="Business Insider logo"
-            />
-            <img
-              src="./img/logos/the-new-york-times.jpg"
-              alt="the-new-york-times"
-            />
-            <img src="./img/logos/forbes.jpg" alt="forbes" />
-            <img src="./img/logos/usa-today.jpg" alt="usa-today.jpg" />
-          </div>
-        </div>
-      </section>
+        <section class="section-featured">
+            <div class="conatiner">
+                <h2 class="heading-featured-in">As featured in</h2>
+                <div class="logos">
+                    <img src="./img/logos/techcrunch.jpg" alt="BBC logo" />
+                    <img src="./img/logos/business-insider.jpg" alt="Business Insider logo" />
+                    <img src="./img/logos/the-new-york-times.jpg" alt="the-new-york-times" />
+                    <img src="./img/logos/forbes.jpg" alt="forbes" />
+                    <img src="./img/logos/usa-today.jpg" alt="usa-today.jpg" />
+                </div>
+            </div>
+        </section>
 
-      <section class="section-how" id="how">
-          <div class="container">
-            <span class="subheading">How it works</span>
-            <h2>Your daily dose of health in 3 simple steps</h2>
-          </div>
-        <div class="container grid grid--2-cols grid--center-v">
-          <!-- STEP 01 -->
-          <div class="step-text-box">
-            <p class="step-number">01</p>
-            <h3 class="heading-tertiary">
-              Tell us what you like (and what not)
-            </h3>
-            <p class="step-description">
-              Never again waste time thinking about what to eat! Omnifood AI
-              will create a 100% personalized weekly meal plan just for you. It
-              makes sure you get all the nutrients and vitamins you need, no
-              matter what diet you follow!
-            </p>
-          </div>
-          <div class="step-img-box">
-            <img
-              src="./Img/app/app-screen-1.jpg"
-              class="step-img"
-              alt="iPhone app prefernces slection screen"
-            />
-          </div>
+        <section class="section-how" id="how">
+            <div class="container">
+                <span class="subheading">How it works</span>
+                <h2 class="heading-secondary">Your daily dose of health in 3 simple steps</h2>
+            </div>
+            <div class="container grid grid--2-cols grid--center-v">
+                <!-- STEP 01 -->
+                <div class="step-text-box">
+                    <p class="step-number">01</p>
+                    <h3 class="heading-tertiary">
+                        Tell us what you like (and what not)
+                    </h3>
+                    <p class="step-description">
+                        Never again waste time thinking about what to eat! Omnifood AI
+                        will create a 100% personalized weekly meal plan just for you. It
+                        makes sure you get all the nutrients and vitamins you need, no
+                        matter what diet you follow!
+                    </p>
+                </div>
+                <div class="step-img-box">
+                    <img src="./Img/app/app-screen-1.jpg" class="step-img"
+                        alt="iPhone app prefernces slection screen" />
+                </div>
 
-        <!-- STEP 02 -->
-         <div class="step-img-box">
-            <img src="./img/app/app-screen-2.jpg" class="step-img" alt="iPhone app meal selection screen" />
-         </div>
-        </div>
-      </section>
+                <!-- STEP 02 -->
+                <div class="step-img-box">
+                    <img src="./img/app/app-screen-2.jpg" class="step-img" alt="iPhone app meal selection screen" />
+                </div>
+                <div class="step-text-box">
+                    <p class="step-number">02</p>
+                    <h3 class="heading-tertiary">Approve your weekly meal plan</h3>
+                    <p class="step-description">
+                        Once per week, approve the meal plan generated for you by Omnifood AI. You can change
+                        ingredients, swap entire meals, or even add your own recipes.
+                    </p>
+                </div>
+
+                <!-- STEP 03 -->
+                <div class="step-text-box">
+                    <p class="step-number">03</p>
+                    <h3 class="heading-tertiary">Receive meals at convenient time</h3>
+                    <p class="step-description">
+                        Best chefs in town will cook your selected meal every day, and we will deliver it to your door
+                        whenever works best for you. You can change delivery schedule and address daily!
+                    </p>
+                </div>
+
+                <div class="step-img-box">
+                    <img src="./img/app/app-screen-3.jpg" class="step-img" alt="iPhone app delivery screen" />
+                </div>
+        </section>
     </main>
-  </body>
+</body>
 </html>
