--- a/index.html
+++ b/index.html
@@ -141,6 +141,61 @@
                     <img src="./img/app/app-screen-3.jpg" class="step-img" alt="iPhone app delivery screen" />
                 </div>
         </section>
+
+        <section class="section-meals" id="meals">
+            <div class="conatiner center-text">
+                <span class="subheading">Meals</span>
+                <h2 class="heading-secondary">
+                    Omnifood AI chooses from 5,000+ recipes
+                </h2>
+            </div>
+            <div class="container grid grid--3-cols">
+                <div class="meal">
+                    <img src="./img/meals/meal-1.jpg" class="meal-img" alt="Japanse Gayozas" />
+                </div>
+                <div class="meal-content">
+                    <div class="meals-tags">
+                        <span class="tag tag--vegetarian">Vegetarian</span>
+                    </div>
+                    <p class="meal-title">Japanese Gyozas</p>
+                    <ul class="meal-attributes">
+                        <li class="meal-attribute">
+                            <ion-icon name="flame-outline"></ion-icon>
+                            <span>650</span>cal
+                        </li>
+                        <li class="meal-attribute">
+                            <ion-icon class="meal-icon" name="restaurant-outline"></ion-icon>
+                            <span>NutriScre &reg;<strong>74</strong></span>
+                        </li>
+                        <li class="meal-attribute">
+                            <ion-icon class="meal-icon" name="star-outline"></ion-icon>
+                            <span><strong>4.9</strong> rating (537)</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="meal">
+                    <img src="./img/meals/meal-2.jpg" class="meal-img" alt="Avocado Salad" />
+                </div>
+                <div class="meal-content">
+                    <div class="meals-tags">
+                        <span class="tag tag--vegan">Vegan</span>
+                        <span class="tag tag--paleo">Paleo</span>
+                    </div>
+                    <p class="meal-title">Avocado Salad</p>
+                    <ul class="meal-attributes">
+                        <li class="meal-attribute">
+                            <ion-icon name="flame-outline"></ion-icon>
+                            <span><strong>400</strong> calories</span>
+                        </li>
+                        <li class="meal-attribute">
+                            <ion-icon class="meal-icon" name="restaurant-outline"></ion-icon>
+                            <span>NutriScore &reg;<strong> 92</strong></span>
+                        </li>
+                    </ul>
+                </div>
+            </div> 
+        </section>
     </main>
 </body>
+
 </html>
