--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
                         <p class="meal-title">Japanese Gyozas</p>
                         <ul class="meal-attributes">
                             <li class="meal-attribute">
-                                <ion-icon name="flame-outline"></ion-icon>
-                                <span>650</span>cal
+                                <ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+                                <span><strong>650</strong> calories</span>
                             </li>
                             <li class="meal-attribute">
                                 <ion-icon class="meal-icon" name="restaurant-outline"></ion-icon>
@@ -183,7 +183,7 @@
                         <p class="meal-title">Avocado Salad</p>
                         <ul class="meal-attributes">
                             <li class="meal-attribute">
-                                <ion-icon name="flame-outline"></ion-icon>
+                                <ion-icon class="meal-icon" name="flame-outline"></ion-icon>
                                 <span><strong>400</strong> calories</span>
                             </li>
                             <li class="meal-attribute">
@@ -235,6 +235,201 @@
                     </ul>
                 </div>
             </div>
+
+            <div class="container all-recipes">
+                <a href="#" class="link">See all recipes &rarr;</a>
+            </div>
+        </section>
+
+        <section class="section-testimonials" id="testimonals">
+            <div class="testimonials-container">
+                <span class="subheading">Testimonials</span>
+                <h2 class="heading-secondary">Once you try it, you can't go back</h2>
+                <div class="testimonals">
+                    <figure class="testimonal">
+                        <img class="testimonal-img" src="./Img/customer/dave.jpg" alt="Photo customer Dave Bryson" />
+                        <blockquote class="testimonal-text">
+                            Inexpensive, healthy and great-tasting meals, without even
+                            having to order manually! It feels truly magical.
+                        </blockquote>
+                        <p class="testimonal-name">&mdash; Dave Bryson</p>
+                    </figure>
+                    <figure class="testimonal">
+                        <img class="testimonal-img" src="./Img/customer/ben.jpg" alt="Photo customer Ben Hadley" />
+                        <blockquote class="testimonal-text">
+                            The AI algorithm is crazy good, it chooses the right meals for
+                            me every time. It's amazing not to worry about food anymore!
+                        </blockquote>
+                        <p class="testimonal-name">&mdash; Ben Hadley</p>
+                    </figure>
+                    <figure class="testimonal">
+                        <img class="testimonal-img" src="./Img/customer/steve.jpg" alt="Photo customer Steve
+                  Miller" />
+                        <blockquote class="testimonal-text">
+                            Omnifood is a life saver! I just started a company, so there's
+                            no time for cooking. I couldn't live without my daily meals now!
+                        </blockquote>
+                        <p class="testimonal-name">&mdash; Steve Miller</p>
+                    </figure>
+                    <figure class="testimonal">
+                        <img class="testimonal-img" src="./Img/customer/hannah.jpg" alt="Photo customer Hannah Smith" />
+                        <blockquote class="testimonal-text">
+                            I got Omnifood for the whole family, and it frees up so much
+                            time! Plus, everything is organic and vegan and without plastic.
+                        </blockquote>
+                        <p class="testimonal-name">&mdash; Hannah Smith</p>
+                    </figure>
+                </div>
+            </div>
+
+            <div class="gallery">
+                <figure class="gallery-item">
+                    <img src="./Img/gallery/gallery-1.jpg" alt="Photo of beautifully arranged food" />
+                </figure>
+                <figure class="gallery-item">
+                    <img src="./Img/gallery/gallery-2.jpg" alt="Photo of beautifully arranged food" />
+                </figure>
+                <figure class="gallery-item">
+                    <img src="./Img/gallery/gallery-3.jpg" alt="Photo of beautifully arranged food" />
+                </figure>
+                <figure class="gallery-item">
+                    <img src="./Img/gallery/gallery-4.jpg" alt="Photo of beautifully arranged food" />
+                </figure>
+                <figure class="gallery-item">
+                    <img src="./Img/gallery/gallery-5.jpg" alt="Photo of beautifully arranged food" />
+                </figure>
+                <figure class="gallery-item">
+                    <img src="./Img/gallery/gallery-6.jpg" alt="Photo of beautifully arranged food" />
+                </figure>
+                <figure class="gallery-item">
+                    <img src="./Img/gallery/gallery-7.jpg" alt="Photo of beautifully arranged food" />
+                </figure>
+                <figure class="gallery-item">
+                    <img src="./Img/gallery/gallery-8.jpg" alt="Photo of beautifully arranged food" />
+                </figure>
+                <figure class="gallery-item">
+                    <img src="./Img/gallery/gallery-9.jpg" alt="Photo of beautifully arranged food" />
+                </figure>
+                <figure class="gallery-item">
+                    <img src="./Img/gallery/gallery-10.jpg" alt="Photo of beautifully arranged food" />
+                </figure>
+                <figure class="gallery-item">
+                    <img src="./Img/gallery/gallery-11.jpg" alt="Photo of beautifully arranged food" />
+                </figure>
+                <figure class="gallery-item">
+                    <img src="./Img/gallery/gallery-12.jpg" alt="Photo of beautifully arranged food" />
+                </figure>
+            </div>
+        </section>
+
+        <section class="section-pricing" id="pricing">
+            <div class="container">
+                <span class="subheading">Pricing</span>
+                <h2 class="heading-secondary">
+                    Eating well without breaking the bank
+                </h2>
+            </div>
+
+            <div class="container grid grid--2-cols margin-bottom-md">
+                <div class="pricing-plan pricing-plan--starter">
+                    <div class="plan-header">
+                        <p class="plan-name">Starter</p>
+                        <p class="plan-price"><span>$</span>399</p>
+                        <p class="plan-text">per month. That's just $13 per meal</p>
+                    </div>
+                    <ul class="meal-attributes">
+                        <li class="meal-attribute">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>1 meal per day</span>
+                        </li>
+                        <li class="meal-attribute">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Order from 11 am to 9
+                                pm</span>
+                        </li>
+                        <li class="meal-attribute">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Delivery is
+                                free</span>
+                        </li>
+                        <li class="meal-attribute">
+                            <ion-icon class="list-icon" name="close-outline"></ion-icon>
+                        </li>
+                    </ul>
+                    <div class="plan-sing-up">
+                        <a href="#" class="btn btn--full">Start eating well</a>
+                    </div>
+                </div>
+
+                <div class="pricing-plan pricing-plan--complete">
+                    <div class="plan-header">
+                        <p class="plan-name">Complete</p>
+                        <p class="plan-price"><span>$</span>649</p>
+                        <p class="plan-text">per month. That's just $11 per meal!</p>
+                    </div>
+                    <ul class="meal-attributes">
+                        <li class="meal-attribute">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>2 meals per day</span>
+                        </li>
+                        <li class="meal-attribute">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Order 24/7</span>
+                        </li>
+                        <li class="meal-attribute">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Delivery is
+                                free</span>
+                        </li>
+                        <li class="meal-attribute">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Get access to latest
+                                recipes</span>
+                        </li>
+                    </ul>
+                    <div class="plan-sing-up">
+                        <a href="#" class="btn btn--full">Start eating well</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container grid">
+                <aside class="plan-details">
+                    Prices include all applicable taxes. You can cancel at any time.
+                    Both plans include the following:
+                </aside>
+            </div>
+
+            <div class="container grid grid--4-cols">
+                <div class="feature">
+                    <ion-icon class="feature-icon" name="infinite"></ion-icon>
+                    <p class="feature-title">Never cook again!</p>
+                    <p class="feature-text">
+                        Our subscriptions cover 365 days per year, even including major
+                        holidays.
+                    </p>
+                </div>
+                <div class="feature">
+                    <ion-icon class="feature-icon" name="nutrition-outline"></ion-icon>
+                    <p class="feature-title">Healthy &amp; balanced</p>
+                    <p class="feature-text">
+                        Our cooks only use local, fresh, and organic products to prepare your meals.
+                    </p>
+                </div>
+                <div class="feature">
+                    <ion-icon class="feature-icon" name="leaf-outline"></ion-icon>
+                    <p class="feature-title">No waste</p>
+                    <p class="feature-text">
+                        All our partners only use reusable containers to package all your
+                        meals.
+                    </p>
+                </div>
+                <div class="feature">
+                    <ion-icon class="feature-icon" name="pause-outline"></ion-icon>
+                    <p class="feature-title">Pause anytime</p>
+                    <p class="feature-text">
+                        Going on vacation? Just pause your subscription, and we refund
+                        unused days.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="section-cta" id="cta">
+            
         </section>
     </main>
 </body>
